--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.9",
+    "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.523.0",
+    "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
